--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xenz Sahaja</title>
+    <title>Alfareza Sahaja</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
@@ -16,7 +16,7 @@
 
         body {
             font-family: "Jost", sans-serif;
-            background: url('https://files.catbox.moe/dvzw69.jpg') center center;
+            background: url('https://files.catbox.moe/nsvz4d.jpg') center center;
             background-size: cover;
             background-attachment: fixed;
             background-repeat: no-repeat;
@@ -138,7 +138,7 @@
             height: 180px;
             top: -10%;
             left: 0;
-            background: url('https://files.catbox.moe/dvzw69.jpg') center center;
+            background: url('https://files.catbox.moe/nsvz4d.jpg') center center;
             background-size: cover;
             filter: blur(8px);
             transform: scale(1.1);
@@ -205,7 +205,7 @@
             font-weight: 700;
             font-size: 14px;
             margin-bottom: 15px;
-            color: #ff4757;
+            color: #0000FF;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
@@ -279,7 +279,7 @@
         .card-buttons button.is-active,
         .card-buttons button:hover {
             color: #fff;
-            border-bottom: 3px solid #ff4757;
+            border-bottom: 3px solid #0000FF;
             background: linear-gradient(to bottom, rgba(255, 71, 87, 0) 0%, rgba(255, 71, 87, 0.2) 100%);
         }
 
@@ -309,7 +309,7 @@
         }
 
         .card-timeline:after {
-            background: linear-gradient(to bottom, #ff4757, #ff6b7a, #c44569);
+            background: linear-gradient(to bottom, #0000FF, #ff6b7a, #c44569);
             content: "";
             left: 42px;
             width: 2px;
@@ -341,8 +341,8 @@
             font-size: 10px;
             text-indent: -35px;
             border-radius: 50%;
-            color: #ff4757;
-            background: linear-gradient(to bottom, #ff6b7a, #ff4757);
+            color: #0000FF;
+            background: linear-gradient(to bottom, #ff6b7a, #0000FF);
             font-weight: bold;
         }
 
@@ -392,13 +392,13 @@
             height: 20px;
             margin-right: 12px;
             transition: 0.3s;
-            color: #ff4757;
+            color: #0000FF;
         }
 
         .contact-me {
             border: 0;
             outline: none;
-            background: linear-gradient(135deg, #ff4757, #ff6b7a);
+            background: linear-gradient(135deg, #0000FF, #ff6b7a);
             box-shadow: 0 8px 16px rgba(255, 71, 87, 0.3);
             color: #fff;
             padding: 12px 20px;
@@ -437,7 +437,7 @@
         .project-title {
             font-size: 16px;
             font-weight: 600;
-            color: #ff4757;
+            color: #0000FF;
             margin-bottom: 8px;
         }
 
@@ -490,8 +490,8 @@
     <div class="card" data-state="#about">
         <div class="card-header">
             <div class="card-cover"></div>
-            <img class="card-avatar" src="https://files.catbox.moe/oo46a8.jpg" alt="avatar" />
-            <h1 class="card-fullname">Xenz</h1>
+            <img class="card-avatar" src="https://files.catbox.moe/sie0wy.jpg" alt="avatar" />
+            <h1 class="card-fullname">Alfarz</h1>
             <h2 class="card-jobtitle">Pengangguran</h2>
         </div>
         
@@ -504,16 +504,16 @@
                     </p>
                 </div>
                 <div class="card-social">
-                    <a href="https://wa.me/6281297662535" target="_blank">
+                    <a href="https://wa.me/6285133801810" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
-                    <a href="https://whatsapp.com/channel/0029VbBPPG52f3EFT7ldeT0m" target="_blank">
+                    <a href="https://whatsapp.com/channel/0029VbAeLaHKGGGO86KAtY05" target="_blank">
                         <i class="fas fa-broadcast-tower"></i>
                     </a>
-                    <a href="https://github.com/Kuroxel" target="_blank">
+                    <a href="https://github.com/rihanhacker558" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="mailto:kuroxel4@gmail.com">
+                    <a href="mailto:alfarezavirz@gmail.com">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
@@ -538,10 +538,9 @@
                 <div class="card-content">
                     <div class="card-subtitle">My Projects</div>
                     <div class="project-card">
-                        <div class="project-title">Portfolio Website</div>
+                        <div class="project-title">Belajar</div>
                         <div class="project-desc">
-                            Website portfolio simple yang dibuat menggunakan HTML, CSS, dan JavaScript. 
-                            Menampilkan informasi personal, progress timeline, dan kontak dengan design modern.
+                            Saya baru awal-awal bisa mengetahui tentang javascript, dll. Mungkin membutuhkan pelajaran lebih lanjut.
                         </div>
                     </div>
                 </div>
@@ -562,16 +561,16 @@
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                             </svg>
-                            +62 812-9766-2535
+                            +62 851-3380-1810
                         </div>
                         <div class="card-contact">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                                 <path d="m22 6-10 7L2 6"/>
                             </svg>
-                            kuroxel4@gmail.com
+                            alfarezavirz@gmail.com
                         </div>
-                        <a href="https://wa.me/6281297662535" target="_blank">
+                        <a href="https://wa.me/6285133801810" target="_blank">
                             <button class="contact-me">Contact Me</button>
                         </a>
                     </div>
@@ -588,7 +587,7 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-    <source src="https://files.catbox.moe/yibdqq.mp3" type="audio/mpeg">
+    <source src="https://files.catbox.moe/f78lb2.mp3" type="audio/mpeg">
 </audio>
 
     <script>
