--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
         <div class="card-header">
             <div class="card-cover"></div>
             <img class="card-avatar" src="https://files.catbox.moe/sie0wy.jpg" alt="avatar" />
-            <h1 class="card-fullname">Alfarz</h1>
-            <h2 class="card-jobtitle">Pengangguran</h2>
+            <h1 class="card-fullname">Alfareza</h1>
+            <h2 class="card-jobtitle">Pelajar</h2>
         </div>
         
         <div class="card-main">
@@ -540,7 +540,7 @@
                     <div class="project-card">
                         <div class="project-title">Belajar</div>
                         <div class="project-desc">
-                            Saya baru awal-awal bisa mengetahui tentang javascript, dll. Mungkin membutuhkan pelajaran lebih lanjut.
+                            Saya baru awal-awal bisa mengetahui tentang javascript, dll. Mungkin membutuhkan pelajaran lebih lanjut dan aku mau mencari siapa diriku sebenarnya.
                         </div>
                     </div>
                 </div>
